--- a/style/style.css
+++ b/style/style.css
@@ -130,6 +130,22 @@ main a:hover{
     background-color: var(--cor1);
     text-decoration: underline;
 }
+div.video{
+    background-color: var(--cor5);
+    padding: 30px;
+    margin: 0px -21px 30px -21px;
+    
+    position: relative;
+    padding-bottom: 55.6%;
+}
+div.video > iframe{
+    position: absolute;
+    top: 6%;
+    left: 6%;
+    width: 90%;
+    height: 90%;
+
+}
 aside{
     background-color: var(--cor1);
     padding: 12px;
